--- a/pipeline/ISR/harness/README
+++ b/pipeline/ISR/harness/README
@@ -60,22 +60,18 @@ Most activity is done in local copy of: datarel/pipeline/ISR/harness.
 
 1.1 Acquire, build, make current, then setup local versions of modules which 
    do NOT have policies loaded in the system packages:
-   * definitely need for isr sdqa ctrl_sdqa ; 
-	% setup ip_isr 
+   * definitely need for sdqa (now tagged ready for distribution) 
+     ctrl_sdqa (fixed in trunk) ; 
 	% setup ctrl_sched  
 	% setup sdqa 
    * may need more but I routinely access some packages in local mode
 
 1.2 Acquire, build, make current, then setup local versions of obs_lsstSim
-    (until version with uses channel specs that same as raft specs is installed)
+    (until version with uses channel specs the same as raft specs is installed)
         % setup obs_lsstSim
 
-1.3 Setup packages needed by datarel  (this step carries into Step 2 below)
-   cd datarel; setup -r.
-
-   * At end of README there is listing of currently setup packages when I run.
-     I haven't updated the datarel/ups/datarel.table  - it needs to require
-     ctrl_sched
+1.3 At end of README there is listing of currently setup packages when I run.
+    
 
 2. Setup where your actual files are found or to be archived:
     I setup master.paf to have: 
@@ -91,7 +87,6 @@ Most activity is done in local copy of: datarel/pipeline/ISR/harness.
 # Nicely bundled for one click use:
 cd ~/DC3b/DMS_trunk/datarel
 setup -r .
-setup ip_isr ip_isr_trunk
 setup ctrl_sched ctrl_sched_trunk
 setup sdqa sdqa_trunk
 setup obs_lsstSim obs_lsstSim_trunk
