--- a/pipeline/ISR/harness/README
+++ b/pipeline/ISR/harness/README
@@ -77,7 +77,7 @@ Most activity is done in local copy of: datarel/pipeline/ISR/harness.
     I setup master.paf to have: 
 	runDirPattern: "./"
    Then in datarel/pipeline/ISR/harness, 
-         ln -s /lsst/DC3/stacks/gcc433/04jun/Linux64/afwdata/svn11397 input
+         ln -s /lsst/DC3/data/afwdata/trunk/ImSim input
          mkdir output work update scratch
 
 3. Update PYTHONPATH to find ctrl_sched/bin/sendevents.py:
@@ -92,6 +92,7 @@ setup sdqa sdqa_trunk
 setup obs_lsstSim obs_lsstSim_trunk
 cd ~/DC3b/DMS_trunk/datarel/pipeline/ISR/harness
 ls -ald input
+ls input
 mkdir -p work scratch update output
 pushd ~/DC3b/DMS_trunk/ctrl_sched/examples/pipeline
 setup -r .
